# quirky

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  index.html  params.json
data/: Makefile.am  client-resources.gresource.xml  messages.conf  quirky.desktop  servers.conf  style.css
src/: CountItem.vala  Dialogs.vala  DummyBot.vala  DummyClient.vala  IrcConstants.vala  IrcCore.vala  IrcParser.vala  IrcTextEntry.vala  IrcTextWidget.vala  Makefile.am  Messages.vala  QuirkyClient.vala  Sidebar.vala  Widgets.vala  quirky.exe.manifest  quirky.rc.in
